--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://ctx42.com"
+baseurl = "https://blog.ctx42.com"
 languageCode = "en-us"
 title = "CTX/42"
 
