--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,3 +1,16 @@
 caches:
   images:
     dir: :cacheDir/images
+
+frontmatter:
+  date:
+    - date
+    - :git
+    - lastmod
+  lastmod:
+    - date
+    - :git
+  publishDate:
+    - date
+    - :git
+    - lastmod
